prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/if_var_decl_init.diag.txt
ERROR: Initialization required
testData/diagnostics/if_var_decl_init.nut:1:11

if (local x)
           ^
    println("fail")


